# ManagerCSV

./: README.md  pyproject.toml
src/CSVManager/: index.py
