[project]
name = "ManagerCSV"
version = "1.0.1"
authors = [
  { name = "Dulinniel", email= "nightingalenervous@gmail.com" },
]

description = " Just a random package to deal with CSV files "
readme = "README.md"
requires-python = ">=3.10.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Dulinniel/CSVManager/tree/main"
"Bug Tracker" = "https://github.com/Dulinniel/CSVManager/issues"
